[package]
name = "porture"
version = "0.1.0"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
description = "A minimal, programmable port forwarder written in Rust"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
human-panic = "2.0.3"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
